[tool.poetry]
name = "off"
version = "0.1.0"
description = ""
authors = ["Slava Semushin <slava.semushin@gmail.com>"]
readme = "README.md"
packages = [{include = "off", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
